Fixed content overflow in the Mobile view by redesigning the messages… (#123)
* Fixed content overflow in the Mobile view by redesigning the messages tab

* Fixed column messages overflow in the Mobile view by redesigning the messages tab- CSS

--- a/application/frontend/src/App.css
+++ b/application/frontend/src/App.css
@@ -490,3 +490,14 @@ html, body, #app {
   font-weight: 700;
   font-size: large;
 }
+
+.msgCol{
+  background-color: #E8E8E8;
+  margin: 1px;
+  margin-bottom: 5px;
+  border-radius: 10px;
+}
+
+#msgRow{
+  margin-top: 10px;
+}
